refactor VendorControllerTest